started JS code

--- a/etch.html
+++ b/etch.html
@@ -11,7 +11,7 @@
   <section class="controls">
     <button>Redraw Grid</button>
   </section>
-  <section class="grid"></section>
+  <section class="grid"></se$ction>
 
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="etch.js"></script>
